--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "project2",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,8 +19,11 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "handlebars": "^4.1.2",
     "knex": "^0.17.3",
     "mysql": "^2.17.1",
     "snazzy": "^8.0.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
